--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
-        "overtrue/laravel-lang": "1.0.*"
+        "overtrue/laravel-lang": "1.0.*",
+        "dflydev/apache-mime-types": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -21,7 +22,10 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "file": [
+            "app/helpers.php"
+        ]
     },
     "autoload-dev": {
         "classmap": [
