--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "psr-4": {
             "App\\": "app/"
         },
-        "file": [
+        "files": [
             "app/helpers.php"
         ]
     },
