--- a/.env.example
+++ b/.env.example
@@ -17,4 +17,11 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.163.com
+MAIL_PORT=25
+MAIL_USERNAME=13342260846@163.com
+MAIL_PASSWORD=WS@906424
+MAIL_FROM=13342260846@163.com
+MAIL_NAME=stoneworld
 
